--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -14,7 +14,7 @@ height: 29px;
     background: #FAFAFA;
 border: 1px solid #DBDBDB;
 border-radius: 3px;
-font-family: 'Helvetica Neue';
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 font-size: 16px;
 line-height: 17px;
 display: flex;
@@ -27,9 +27,11 @@ color: #8F8F8F;
 }
 .n5 {    
     padding-left: 21px;
-    padding-bottom: 8px;
+    padding-bottom: 3px;
 }
-
+.redcircle {
+    padding-top: 2px;
+}
 
 @media all and (max-width: 768px) {
     .row {
@@ -37,6 +39,7 @@ color: #8F8F8F;
         height: 120px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-between;
 margin: 0 auto;
 } 
@@ -62,7 +65,7 @@ height: 153px;
     width: 800px;
 }
 .name {
-    font-family: 'Helvetica Neue';
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 500;
 font-size: 26px;
 line-height: 32px;
@@ -72,7 +75,7 @@ color: #262626;
 }
 
 .button1{
-    font-family: 'Helvetica Neue';
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: normal;
 font-weight: 700;
 font-size: 14px;
@@ -110,14 +113,19 @@ font-size: 17px;
 
 @media all and (max-width: 768px) {
 .box1 {
+    max-width: 320px;
 flex-direction: column;
 }
 
 .box11 {
+    width: 320px;
+    height: 100px;
     display: flex;
-    justify-content: center;
+    align-items: center;
     margin-top: 30px;
-    margin-left: 200px;
+    margin-left: 0px;
+    flex-wrap: wrap;
+    justify-content: center;
     }
 
 .box12 {
@@ -128,15 +136,45 @@ flex-direction: column;
     justify-content: space-between;
 margin: 0 auto;
 }
-
+.name {
+    width: 320px;
+  display: flex; 
+  flex-direction: row; 
+  justify-content: center;
+}
+.textbox11 {
+    width: 320px;
+    display: flex;
+    justify-content: center;
+    padding-top: 15px;
+}
+.textbox12 {
+    width: 320px;
+    height: 30px;
+    display: flex;
+    margin-left: 20px;
 }
 
+.line {
+    width: 320px;
+}
+.link1 {
+    display: flex;
+    margin-left: 30px;
+    margin-top: 70px;
+}
+.box4 {
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.img14 {
+    width: 180px;
+    height: 180px;
+}
 
-
-
-
-
-
+}
 
 
 .box2 {
@@ -148,9 +186,7 @@ margin: 0 auto;
 .img10 {
     width: 79px;
     height: 79px;
-   border: 1px solid #DBDBDB;
-    border-radius: 50%;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(Checker.png);
+   
 }
 
 .box4{
@@ -159,4 +195,42 @@ margin: 0 auto;
 .p-2 {
     width: 297px;
 height: 297px;
+}
+
+@media all and (max-width: 768px) {
+    .box2{
+        width: 320px;
+    padding-left: 0;
+    }
+    .img7 {
+        flex-direction: column;
+        align-items: center;
+    }
+   .p-2 {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    
+   }
+.box4 {
+    width: 320px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0;
+}
+.img10 {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+}
+.textbox211{
+    font-size: 12px;
+    padding-left: 5px;
+}
+
 }
