--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -1,5 +1,5 @@
 .row {
-    width: 1200px;
+    width: 100%;
    
 }
 .insta {
@@ -32,10 +32,12 @@ color: #8F8F8F;
 .redcircle {
     padding-top: 2px;
 }
-
+.boxpoint {
+    width: 25px;
+}
 @media all and (max-width: 768px) {
     .row {
-        width: 320px;
+        width: 100%;
         height: 120px;
     display: flex;
     flex-direction: column;
@@ -43,7 +45,6 @@ color: #8F8F8F;
     justify-content: space-between;
 margin: 0 auto;
 } 
-
 }
 
 
@@ -51,7 +52,7 @@ margin: 0 auto;
 
 
 .box1 {
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
        
 }
@@ -101,7 +102,12 @@ border-radius: 3px;
 height: 4px;
 }
 
-
+.boxpoint {
+    width: 25px;
+}
+.textbox1 {
+    text-decoration: none;
+}
 .textbox12 {
     width: 531px;
 height: 51px;
@@ -118,7 +124,7 @@ flex-direction: column;
 }
 
 .box11 {
-    width: 320px;
+    width: 100%;
     height: 100px;
     display: flex;
     align-items: center;
@@ -143,28 +149,34 @@ margin: 0 auto;
   justify-content: center;
 }
 .textbox11 {
-    width: 320px;
+    width: 100%;
     display: flex;
     justify-content: center;
     padding-top: 15px;
 }
 .textbox12 {
-    width: 320px;
+    width: 100%;
     height: 30px;
     display: flex;
-    margin-left: 20px;
+    text-align: center;
+    font-size: 14px;
 }
-
+.blackellipse{
+    width: 100%;
+}
 .line {
-    width: 320px;
+    width: 100;
 }
 .link1 {
     display: flex;
     margin-left: 30px;
-    margin-top: 70px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    text-align: center;
 }
 .box4 {
-    width: 320px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -178,15 +190,18 @@ margin: 0 auto;
 
 
 .box2 {
-    width: 1200px;
+    width: 100%;
     height: 80px;
-    padding-left: 80px;
+    justify-content: center;
+    padding-right: 700px;
 }
-
+.img9{
+    margin-top: 4px;
+}
 .img10 {
     width: 79px;
     height: 79px;
-   
+    margin-right: 40px;
 }
 
 .box4{
@@ -199,8 +214,9 @@ height: 297px;
 
 @media all and (max-width: 768px) {
     .box2{
-        width: 320px;
-    padding-left: 0;
+        justify-content: space-evenly;
+    padding-right: 0;
+    width: 100%;
     }
     .img7 {
         flex-direction: column;
@@ -214,7 +230,7 @@ height: 297px;
     
    }
 .box4 {
-    width: 320px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -226,11 +242,15 @@ height: 297px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 20px;
+    margin-right: 0px;
 }
 .textbox211{
     font-size: 12px;
     padding-left: 5px;
+}
+.img11 {
+    width: 360px;
+    height: 2px;
 }
 
 }
