--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -4,8 +4,9 @@
 }
 .insta {
     height: 30px;
-width: 105px;
+width: 250px;
 border-radius: 0px;
+text-align: center;
 
 }
 .btn {
@@ -23,7 +24,7 @@ text-align: center;
 color: #8F8F8F;
 }
 .cont1 {
-    width: 200px;
+    width: 250px;
 }
 .n5 {    
     padding-left: 21px;
@@ -35,10 +36,13 @@ color: #8F8F8F;
 .boxpoint {
     width: 25px;
 }
+.img11{
+    width: 100%;
+}
 @media all and (max-width: 768px) {
     .row {
         width: 100%;
-        height: 120px;
+        height: 160px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -116,6 +120,9 @@ font-style: normal;
 font-weight: 400;
 font-size: 17px;
 }
+.box4{
+    text-align: center;
+}
 
 @media all and (max-width: 768px) {
 .box1 {
@@ -185,7 +192,6 @@ margin: 0 auto;
     width: 180px;
     height: 180px;
 }
-
 }
 
 
@@ -205,7 +211,7 @@ margin: 0 auto;
 }
 
 .box4{
-    width: 1200px;
+    width: 100%;
 }
 .p-2 {
     width: 297px;
@@ -249,7 +255,7 @@ height: 297px;
     padding-left: 5px;
 }
 .img11 {
-    width: 360px;
+    width: 100%;
     height: 2px;
 }
 
